--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:10
+FROM node:10 as server
 
 # Create app directory
 WORKDIR /usr/src/app/server
@@ -6,14 +6,14 @@ WORKDIR /usr/src/app/server
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY . ./
+COPY package*.json ./
 
 RUN npm install
 # If you are building your code for production
 # RUN npm ci --only=production
 
 # Bundle app source
-COPY . .
+COPY --from=server ./
 
 EXPOSE 80
 
