--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,20 +1,14 @@
 FROM node:10 as server
 
-# Create app directory
-RUN mkdir -p /usr/src/app
-WORKDIR /usr/src/app/
+WORKDIR /app
 
-# Install app dependencies
-# A wildcard is used to ensure both package.json AND package-lock.json are copied
-# where available (npm@5+)
-COPY package*.json /usr/src/app/
+COPY package*.json ./
 
 RUN npm install
 # If you are building your code for production
 # RUN npm ci --only=production
 
 # Bundle app source
-COPY . /usr/src/app
 
 EXPOSE 80
 
