--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,9 +2,7 @@ FROM node:10 as server
 
 WORKDIR /usr/src/app
 
-COPY package*.json ./usr/src/app
-
-WORKDIR /usr/src/app
+COPY package*.json ./
 
 RUN npm install
 # If you are building your code for production
