--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -13,7 +13,7 @@ RUN npm install
 # RUN npm ci --only=production
 
 # Bundle app source
-COPY . /usr/src/app
+COPY ./ ./usr/src/app
 
 EXPOSE 80
 CMD [ "node", "index.js" ]
