--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,12 @@
 FROM node:10
 
 # Create app directory
-WORKDIR /usr/src/app
+WORKDIR /app
 
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY ./server/package*.json /usr/src/app
+COPY ./server/package.json ./app
 
 RUN npm install
 # If you are building your code for production
