--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,18 +1,11 @@
-FROM node:10
+FROM node:12-alpine
 
-# Create app directory
-WORKDIR /app
+WORKDIR /usr/app
 
-# Install app dependencies
-# A wildcard is used to ensure both package.json AND package-lock.json are copied
-# where available (npm@5+)
-COPY ./server/package.json ./app
+COPY package*.json ./
 
 RUN npm install
-# If you are building your code for production
-# RUN npm ci --only=production
 
-# Bundle app source
-COPY ./app .
+COPY . .
+
 EXPOSE 80
-CMD [ "node", "index.js" ]
