--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,7 @@ FROM node:12-alpine as build
 
 WORKDIR /usr/app/client
 
-COPY /client/package*.json ./
+COPY ./client/package*.json ./
 
 RUN npm install
 
