--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,10 +2,8 @@ FROM node:12-alpine as build
 
 WORKDIR /usr/app/client
 
-COPY ./client/package*.json ./
+COPY  ./client/package.json /usr/app/client
 
 RUN npm install
 
 COPY ./client .
-
-RUN npm run create
