--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,3 +3,11 @@ FROM node:12-alpine as build
 WORKDIR /usr/app/client
 
 COPY  ./client/package*.json ./
+
+RUN npm install
+
+COPY . .
+
+RUN npm run create
+
+COPY ./build /usr/app/server
